--- a/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
@@ -1,3 +1,5 @@
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
+
 <div class="ui borderless fixed menu">
   <a class=" item">{{#link-to 'home'}}<img class="ui small image" src="assets/images/SelfStart_logo.png">{{/link-to}}</a>
   <a class="ui right item ">{{#link-to 'patients'}}PATIENT PROFILE{{/link-to}}</a>
