--- a/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
@@ -1,16 +1,40 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
 
-<div class="ui borderless fixed menu">
-  <a class=" item">{{#link-to 'home'}}<img class="ui small image" src="assets/images/SelfStart_logo.png">{{/link-to}}</a>
-  <a class="ui right item ">{{#link-to 'patients'}}PATIENT PROFILE{{/link-to}}</a>
-  <a class="item">3</a>
-  <a class="item">4</a>
-  <a class="item">5</a>
-  <a class="item">6</a>
+<!--<div class="ui borderless fixed menu">-->
+  <!--<a class=" item">{{#link-to 'home'}}<img class="ui small image" src="assets/images/SelfStart_logo.png">{{/link-to}}</a>-->
+  <!--<a class="ui right item ">{{#link-to 'patients'}}PATIENT PROFILE{{/link-to}}</a>-->
+  <!--<a class="item">3</a>-->
+  <!--<a class="item">4</a>-->
+  <!--<a class="item">5</a>-->
+  <!--<a class="item">6</a>-->
+<!--</div>-->
+
+
+<div data-sticky-container>
+  <div data-sticky data-options="marginTop:0;">
+
+    <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
+      <button class="menu-icon" type="button" data-toggle="example-menu"></button>
+      <div class="title-bar-title">Menu</div>
+    </div>
+
+    <div class="top-bar" id="example-menu">
+      <ul class="vertical medium-horizontal dropdown menu" data-responsive-menu="accordion medium-dropdown">
+        <li class="menu-text">{{#link-to 'home'}}<img class="ui small image" src="assets/images/SelfStart_logo.png">{{/link-to}}</li>
+        <li><a class="ui right item ">{{#link-to 'patients'}}PATIENT PROFILE{{/link-to}}</a></li>
+        <li><a class="item">3</a></li>
+        <li><a class="item">4</a></li>
+        <li><a class="item">5</a></li>
+        <li><a class="item">6</a></li>
+      </ul>
+    </div>
+
+  </div>
 </div>
+
 
 {{outlet}}
 
 <div id="footer">
-  <p> I am the footer, and you have scroll down to see me.</p>
+  <p> I am the footer, and you have to scroll down to see me.</p>
 </div>
