--- a/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
@@ -1,16 +1,10 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
 
-<div class="ui borderless fixed menu">
-  <a class=" item">{{#link-to 'home'}}<img class="ui small image" src="assets/images/SelfStart_logo.png">{{/link-to}}</a>
-  <a class="ui right item ">{{#link-to 'patients'}}PATIENT PROFILE{{/link-to}}</a>
-  <a class="item">3</a>
-  <a class="item">4</a>
-  <a class="item">5</a>
-  <a class="item">6</a>
-</div>
+{{#nav-bar}}{{/nav-bar}}
 
 {{outlet}}
 
 <div id="footer">
+  <img class="ui medium centered image" src="assets/images/SelfStart+logo.png">
   <p> I am the footer, and you have scroll down to see me.</p>
 </div>
