--- a/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
@@ -5,6 +5,7 @@
   <a class="item">4</a>
   <a class="item">5</a>
   <a class="item">6</a>
+  <a class="item">{{#link-to 'rehabplans'}}REHAB PLAN{{/link-to}}</a>
 </div>
 
 {{outlet}}
