Added elevate command

--- a/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
@@ -12,5 +12,5 @@
 {{outlet}}
 
 <div id="footer">
-  <p> I am the footer, and you have scroll down to see me.</p>
+  <p> I am the footer.</p>
 </div>
