--- a/SelfStart/SelfStartFrontEnd/app/templates/rehabplans.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/rehabplans.hbs
@@ -1,22 +1,29 @@
-{{outlet}}
 <div id="content">
-  <br>
-  <h2> Blog Posts </h2>
+  {{add-patient}}
 
-  <div class="ui grid">
-    {{#each model as |onePost|}}
-      <div class="eight wide column">
-        <li>{{onePost.title}} </li>
-      </div>
-      <div class="four wide column right aligned">
-        {{edit-post ID=onePost.id}}
-      </div>
-      <div class="four wide column left aligned">
-        {{delete-post ID=onePost.id}}
-      </div>
-    {{/each}}
-  </div>
+  <br><br>
+  <table class="ui compact table">
+    <thead>
+    <tr>
+      <th>Patients</th>
+      <th></th>
+    </tr>
+    </thead>
 
-  {{add-new-post}}
+    {{#ui-accordion }}
+      <tbody>
+      {{#each model as |Rehabplan|}}
+        <div class="title">
+          <i class="dropdown large blue icon"></i>
+          {{Rehabplan.givenName}} {{Rehabplan.familyName}}
+        </div>
+        <div class="content">
+          {{Rehabplan.email}}
+        </div>
+
+      {{/each}}
+      </tbody>
+    {{/ui-accordion}}
+  </table>
 
 </div>
