made routes and other

--- a/SelfStart/SelfStartFrontEnd/app/templates/rehabplans.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/rehabplans.hbs
@@ -1,5 +1,12 @@
 <div id="content">
-  {{add-patient}}
+  {{add-rehabplan}}
+
+  <div class="ui search">
+    <div class="ui icon input">
+      <input class="prompt" type="text" placeholder="Search Rehab plan" >
+      <i class="search icon"></i>
+    </div>
+  </div>
 
   <br><br>
   <table class="ui compact table">
