--- a/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
@@ -2,6 +2,7 @@
 
 <div class="ui borderless fixed menu">
   <a class=" item">{{#link-to 'home'}}<img class="ui small image" src="assets/images/SelfStart_logo.png">{{/link-to}}</a>
+  <a class="ui right item ">{{#link-to 'admin'}}Settings{{/link-to}}</a>
   <a class="ui right item ">{{#link-to 'patients'}}PATIENT PROFILE{{/link-to}}</a>
   <a class="item">3</a>
   <a class="item">4</a>
