added admin route and some basic html to the hbs file

--- a/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
@@ -3,10 +3,15 @@
 <div class="ui borderless fixed menu">
   <a class=" item">{{#link-to 'home'}}<img class="ui small image" src="assets/images/SelfStart_logo.png">{{/link-to}}</a>
   <a class="ui right item ">{{#link-to 'patients'}}PATIENT PROFILE{{/link-to}}</a>
-  <a class="item">3</a>
-  <a class="item">4</a>
-  <a class="item">5</a>
-  <a class="item">6</a>
+  <a class="ui right item ">
+    <h2 class="ui icon header">
+        <div class="content">{{#link-to 'admin'}}<i class="settings icon"></i>{{/link-to}}</div>
+    </h2>
+  </a>
+
+  <a class="item"></a>
+  <a class="item"></a>
+  <a class="item"></a>
 </div>
 
 {{outlet}}
