--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-question.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-question.hbs
@@ -24,40 +24,46 @@
 {{#if shortAns}}
 
       <div class="fourteen wide field">
-        {{input type="text" placeholder = "Question"}}
+        {{input type="text" value = saquestion placeholder = "Question"}}
       </div>
-     {{input type="text" placeholder = "Help"}}
+     {{input type="text" value = sahelp placeholder = "Help"}}
 {{/if}}
 
 {{#if multipleChoice}}
 
-      <div class="fourteen wide field">
-        {{input type="text" placeholder = "Option 1"}}
+    <div class="fourteen wide field">
+        {{input type="text" value = mcquestion placeholder = "Question"}}
+    </div> 
+
+    <<br> 
+
+    <div class="fourteen wide field">
+        {{input type="text" value = mcop1 placeholder = "Option 1"}}
 
         {{#if option2}}
-            {{input type="text" placeholder = "Option 2"}}
+            {{input type="text" value = mcop2 placeholder = "Option 2"}}
         {{/if}}
 
         {{#if option3}}
-            {{input type="text" placeholder = "Option 3"}}
+            {{input type="text" value = mcop3 placeholder = "Option 3"}}
         {{/if}}
 
         {{#if option4}}
-            {{input type="text" placeholder = "Option 4"}}
+            {{input type="text" value = mcop4 placeholder = "Option 4"}}
         {{/if}}
 
         {{#if option5}}
-            {{input type="text" placeholder = "Option 5"}}
+            {{input type="text" value = mcop5 placeholder = "Option 5"}}
         {{/if}}
 
         {{#if option6}}
-            {{input type="text" placeholder = "Option 6"}}
+            {{input type="text" value = mcop6 placeholder = "Option 6"}}
         {{/if}}
 
 
-      </div>
+    </div>
 
-      <div class="fourteen wide field">
+    <div class="fourteen wide field">
 
         {{#if addable}}
         <button class="ui blue button" {{action "addOption"}}>Add Option</button>
@@ -66,29 +72,14 @@
         {{#if removable}}
         <button class="ui blue button" {{action "removeOption"}}>Remove Option</button>
         {{/if}}
-      </div>  <br><br><br>
+    </div>  <br><br><br>
     
-      <div class="fourteen wide field">
-        {{input type="text" placeholder = "Help"}}
-      </div>
-      
-
+    <div class="fourteen wide field">
+        {{input type="text" value = mchelp placeholder = "Help"}}
+    </div>
 {{/if}}
 
-  {{!--   <div class="fields">
-      <div class="two wide field">
-        <i id="icon" class="black large home icon"></i>
-      </div>
-      <div class="eight wide field">
-        {{input type="text" value = streetName placeholder="Street Name"}}
-      </div>
-      <div class="three wide field">
-        {{input type="text" value = streetNumber placeholder="Street #"}}
-      </div>
-      <div class="three wide field">
-        {{input type="text" value = Appartment placeholder="Unit #"}}
-      </div>
-    </div> --}}
+
 
     <br><br>
     <div class="ui centered grid">
@@ -98,6 +89,7 @@
   </form>
 
   </div>
+
 {{else}}
   <button class="ui button" {{action 'addQuestion'}}>
     Add Question
