--- a/SelfStart/SelfStartFrontEnd/app/styles/app.css
+++ b/SelfStart/SelfStartFrontEnd/app/styles/app.css
@@ -28,6 +28,8 @@ h1 {
   height:100vh;
 }
 
+
+
 .header{
   position:absolute;
   top:50%;
@@ -43,7 +45,7 @@ h1 {
 
 #content{
   padding:100px 50px;
-  text-align:center;
+  /*text-align:center;*/
   width:80%;
   margin:0px auto;
 }
@@ -102,15 +104,15 @@ h1 {
 }
 
 
-.icon{
+/*.icon{*/
 
-  font-size: 35px;
-  height: 60px;
-  width: 60px;
-  line-height: 60px;
-  text-align: center;
-  color: #00aefd;
-}
+  /*font-size: 35px;*/
+  /*height: 60px;*/
+  /*width: 60px;*/
+  /*line-height: 60px;*/
+  /*text-align: center;*/
+  /*color: #00aefd;*/
+/*}*/
 
 #clickable{
   cursor: pointer
@@ -146,6 +148,6 @@ h1 {
 }
 
 #icon{
- padding-top: 10px;
+ padding-top: 5px;
 }
 
