--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-rehabplan.hbs
@@ -2,7 +2,7 @@
 
   <div class="ui fluid raised very padded text container segment">
 
-    <h2 id="patient" class="ui fluid centered header">Add New Patient</h2>
+    <h2 id="rehabPlan" class="ui fluid centered header">Add New Rehab Plan</h2>
 
     <form class="ui form">
       <div class="fields">
@@ -10,37 +10,73 @@
           <i id="icon" class="black large user icon"></i>
         </div>
         <div class="seven wide field">
-          {{input type="text" value = givenName placeholder="First Name"}}
+          {{input type="text" value = Name placeholder="Rehab plan name"}}
         </div>
+
         <div class="seven wide field">
-          {{input type="text" value = familyName placeholder="Last Name"}}
+          {{input type="text" value = authorName placeholder="Author Name"}}
         </div>
       </div>
 
-
+      <!--Description-->
       <div class="fields">
         <div class="two wide field">
-          <i id="icon" class="black large mail icon"></i>
+          <i id="icon" class="black large comment icon"></i>
         </div>
         <div class="fourteen wide field">
-          {{input type="text" value = email placeholder="Email"}}
+          {{input type="text" value = description placeholder="Description"}}
         </div>
       </div>
 
+      <!--goal-->
       <div class="fields">
         <div class="two wide field">
-          <i id="icon" class="black large home icon"></i>
+          <i id="icon" class="black large trophy icon"></i>
         </div>
-        <div class="eight wide field">
-          {{input type="text" value = streetName placeholder="Street Name"}}
-        </div>
-        <div class="three wide field">
-          {{input type="text" value = streetNumber placeholder="Street #"}}
-        </div>
-        <div class="three wide field">
-          {{input type="text" value = Appartment placeholder="Unit #"}}
+        <div class="fourteen wide field">
+          {{input type="text" value = goal placeholder="Goal"}}
         </div>
       </div>
+      <!--Time to complete-->
+      <div class="inline fields">
+        <div class="two wide field">
+          <i id="icon" class="black large wait icon"></i>
+        </div>
+        <div class=" required five wide field">
+          <div class="ui action input">
+            <button class="ui button" {{action "decreaseTime"}}> <i class="black  minus icon"></i></button>
+            {{input type="text" value = ttc placeholder="Time"}}
+            <button class="ui button"{{action "increaseTime"}}><i class="black  plus icon"></i></button>
+          </div>
+        </div>
+      </div>
+
+      <!--Exercise-->
+      <div class="fields">
+        <div class="two wide field">
+          <i id="icon" class="black large comment icon"></i>
+        </div>
+        <div class="fourteen wide field">
+          {{input type="text" value = exercises placeholder="Exercise"}}
+        </div>
+      </div>
+
+
+      <!--assessment Test-->
+      <div class="fields">
+        <div class="two wide field">
+          <i id="icon" class="black large comment icon"></i>
+        </div>
+        <div class="fourteen wide field">
+          {{input type="text" value = assessmentTests placeholder="Assessmenttests"}}
+        </div>
+      </div>
+
+
+
+
+
+
 
       <br><br>
       <div class="ui centered grid">
@@ -50,8 +86,10 @@
     </form>
 
   </div>
+
+  <!--if not using form, show button-->
 {{else}}
-  <button class="ui button" {{action 'addPatient'}}>
+  <button class="ui button" {{action 'addRehabPlan'}}>
     Add Rehab plan
   </button>
 
