--- a/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
@@ -1,13 +1,14 @@
 <div id="content">
   {{add-question}}
-
+  
   <br><br>
 
   {{#ui-accordion }}
     <tbody>
-        <button class = "ui primary button">Modify Question</button><br><br>
+        <a class="ui primary button">{{#link-to 'questions'}}Modify Question{{/link-to}}</a>
+        <br><br>
         <button class = "ui primary button">Manage Form</button>
     </tbody>
   {{/ui-accordion}}
 
-</div>
+</div>  
