Intro form added

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
@@ -5,7 +5,7 @@
         <a class="main item">{{#link-to 'home'}}<img class="ui small image" src="assets/images/SelfStart_logo.png">{{/link-to}}</a>
         <a class="ui right item ">{{#link-to 'patients'}}PATIENT PROFILE{{/link-to}}</a>
         <a class="item">3</a>
-        <a class="item">4</a>
+        <a class="item">{{#link-to 'rehab-form'}}Intro Form{{/link-to}}</a>
         <a class="item">5</a>
         <a class="item">6</a>
       </div>
