--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-rehabplan.hbs
@@ -44,9 +44,9 @@
         </div>
         <div class=" required five wide field">
           <div class="ui action input">
-            <button class="ui button" {{action "decreaseTime"}}> <i class="black  minus icon"></i></button>
+            <button class="tiny ui  red button" {{action "decreaseTime"}}> <i class="black  minus icon"></i></button>
             {{input type="text" value = ttc placeholder="Time"}}
-            <button class="ui button"{{action "increaseTime"}}><i class="black  plus icon"></i></button>
+            <button class="tiny ui  button"{{action "increaseTime"}}><i class="black  plus icon"></i></button>
           </div>
         </div>
       </div>
