--- a/SelfStart/SelfStartFrontEnd/app/templates/questions.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/questions.hbs
@@ -1,16 +1,16 @@
 <div id='content'>
     <h2> Question List </h2>
     <div class="ui grid">
-    {{#each model as |oneQuestion|}}
+    {{#each model as |question|}}   
         <div class="eight wide column">
-        <li>{{oneQuestion.questionText}} </li>
+        <li>{{question.questionText}} </li>
         </div>
         <div class="four wide column right aligned">
-        {{modify-question ID=oneQuestion.ID}}
+        {{modify-question ID=question.id}}
         </div>
-        {{!-- <div class="four wide column left aligned">
-        {{delete-question ID=oneQuestion.ID}}
-        </div> --}}
+        <div class="four wide column left aligned">
+        {{delete-question ID=question.id}}
+        </div>
     {{/each}}
     </div>
 </div>
