added files for manage form

--- a/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
@@ -1,12 +1,13 @@
 <div id="content">
   {{add-question}}
+  {{manage-form}}
 
   <br><br>
 
   {{#ui-accordion }}
     <tbody>
         <button class = "ui primary button">Modify Question</button><br><br>
-        <button class = "ui primary button">Manage Form</button>
+       
     </tbody>
   {{/ui-accordion}}
 
