Can now create instances of a form (name + description) + delete them.

--- a/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
@@ -8,7 +8,7 @@
     <tbody>
         <a class="ui primary button">{{#link-to 'questions'}}Modify Question{{/link-to}}</a>
         <br><br>
-        <a class = "ui primary button">Manage Form</a>
+        <a class = "ui primary button">{{#link-to 'forms'}}Manage Form{{/link-to}}</a>
     </tbody>
   {{/ui-accordion}}
 
