--- a/SelfStart/SelfStartFrontEnd/app/templates/components/delete-form.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/delete-form.hbs
@@ -5,7 +5,7 @@
 {{#ui-modal name= modalName class= modalName }}
   <div class="ui icon header">
     <i class="warning sign icon"></i>
-    Delete question?
+    Delete form?
     <br><br><br>
   </div>
 
@@ -21,6 +21,6 @@
       Yes
     </div>
   </div>
-  
+
   <br><br>
 {{/ui-modal}}
