--- a/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
@@ -6,9 +6,9 @@
 
   {{#ui-accordion}}
     <tbody>
-        <a class="ui primary button">{{#link-to 'questions'}}Modify Question{{/link-to}}</a>
+        <a class="ui primary basic button">{{#link-to 'questions'}}Modify Question{{/link-to}}</a>
         <br><br>
-        <a class = "ui primary button">{{#link-to 'forms'}}Manage Form{{/link-to}}</a>
+        <a class = "ui primary basic button">{{#link-to 'forms'}}Manage Form{{/link-to}}</a>
     </tbody>
   {{/ui-accordion}}
 
