--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-form.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-form.hbs
@@ -15,8 +15,8 @@
         <br><br>
 
         <div class="ui centered grid">
-            <button class="ui fluid blue button" {{action "submit"}}>Submit</button>
-            <button class="ui fluid blue button" {{action "cancel"}}>Cancel</button>
+            <button class="ui fluid positive button" {{action "submit"}}>Submit</button>
+            <button class="ui fluid negative button" {{action "cancel"}}>Cancel</button>
         </div>
 
     </form>
