--- a/SelfStart/SelfStartFrontEnd/app/templates/components/delete-form.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/delete-form.hbs
@@ -12,7 +12,7 @@
   <br><br><br><br><br>
 
   <div class="actions">
-    <div class="ui red cancel inverted button">
+    <div class="ui right floated red cancel inverted button">
       <i class="remove icon"></i>
       No
     </div>
