--- a/SelfStart/SelfStartFrontEnd/app/templates/components/modify-question.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/modify-question.hbs
@@ -22,7 +22,7 @@
 
   <br>
   <div class="actions">
-    <div class="ui black deny button">
+    <div class="ui right floated red deny button">
       Cancel
     </div>
     <div class="ui positive right labeled icon button">
