Modify question form changed for multiple choice

--- a/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
@@ -3,7 +3,7 @@
     <div class="ui grid">
     {{#each model as |form|}}   
         <div class="eight wide column">
-        <li>{{form.name}} </li>
+        <label>{{form.name}}</label>
         </div>
         {{!-- <div class="four wide column right aligned">
         {{modify-form ID=form.id}}
