--- a/SelfStart/SelfStartFrontEnd/app/templates/questions.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/questions.hbs
@@ -2,12 +2,18 @@
     <h2> Question List </h2>
     <div class="ui grid">
     {{#each model as |question|}}   
-        <div class="eight wide column">
-        <li>{{question.questionText}} </li>
+        <div class="four wide column">
+        <label>{{question.questionText}}</label>
         </div>
+
+        <div class="four wide column">
+        <label>{{question.type}}</label>
+        </div>
+
         <div class="four wide column right aligned">
         {{modify-question ID=question.id}}
         </div>
+        
         <div class="four wide column left aligned">
         {{delete-question ID=question.id}}
         </div>
