--- a/SelfStart/SelfStartFrontEnd/app/templates/components/modify-question.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/modify-question.hbs
@@ -1,4 +1,4 @@
-<button class="ui mini circular icon green button" {{action 'openModal'}} {{action 'isMultipleChoice' qtype = questionData.type}}
+<button class="ui mini circular icon green button" {{action 'openModal'}} {{action 'isMultipleChoice'}}
         title="Edit"><i class="write icon"></i>
 </button>
 
@@ -9,7 +9,60 @@
   <div class="content">
     <div class="ui form">
  
-      <div class="field">
+      {{#if multipleChoice}}
+
+        <div class="field">
+         <label>Question </label>
+         {{input type="text" cols="50" rows="1" value=questionString}}
+        </div>
+
+        <div class="field">
+         <label>Help Description</label>
+         {{textarea cols="50" rows="1" value=questionData.helpDescription}}
+        </div>
+
+        <div class="field">
+          <label>Option 1</label>
+          {{textarea cols="50" rows="1" value=opt1String}}
+        </div>
+
+        {{#if opt2}}
+          <div class="field">
+            <label>Option 2</label>
+            {{textarea cols="50" rows="1" value=opt2String}}
+          </div>
+        {{/if}}
+
+        {{#if opt3}}
+          <div class="field">
+            <label>Option 3</label>
+            {{textarea cols="50" rows="1" value=opt3String}}
+          </div>
+        {{/if}}
+
+        {{#if opt4}}
+          <div class="field">
+            <label>Option 4</label>
+            {{textarea cols="50" rows="1" value=opt4String}}
+          </div>
+        {{/if}}
+
+        {{#if opt5}}
+          <div class="field">
+            <label>Option 5</label>
+            {{textarea cols="50" rows="1" value=opt5String}}
+          </div>
+        {{/if}}
+
+        {{#if opt6}}
+          <div class="field">
+            <label>Option 6</label>
+            {{textarea cols="50" rows="1" value=opt6String}}
+          </div>
+        {{/if}}
+
+      {{else}}
+        <div class="field">
         <label>Question </label>
         {{input type="text" cols="50" rows="1" value=questionData.questionText}}
       </div>
@@ -19,48 +72,9 @@
         {{textarea cols="50" rows="1" value=questionData.helpDescription}}
       </div>
 
-      {{#if multipleChoice}}
-        <div class="field">
-          <label>Option 1</label>
-          {{textarea cols="50" rows="1" value=questionData.helpDescription}}
-        </div>
-
-        {{#if opt2}}
-          <div class="field">
-            <label>Option 2</label>
-            {{textarea cols="50" rows="1" value=questionData.helpDescription}}
-          </div>
-        {{/if}}
-
-        {{#if opt3}}
-          <div class="field">
-            <label>Option 3</label>
-            {{textarea cols="50" rows="1" value=questionData.helpDescription}}
-          </div>
-        {{/if}}
-
-        {{#if opt4}}
-          <div class="field">
-            <label>Option 4</label>
-            {{textarea cols="50" rows="1" value=questionData.helpDescription}}
-          </div>
-        {{/if}}
-
-        {{#if opt5}}
-          <div class="field">
-            <label>Option 5</label>
-            {{textarea cols="50" rows="1" value=questionData.helpDescription}}
-          </div>
-        {{/if}}
-
-        {{#if opt6}}
-          <div class="field">
-            <label>Option 6</label>
-            {{textarea cols="50" rows="1" value=questionData.helpDescription}}
-          </div>
-        {{/if}}
-
       {{/if}}
+
+      
     </div>
   </div>
 
