editing of multiple choice questions now saves to the back end

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/modify-question.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/modify-question.hbs
@@ -13,51 +13,51 @@
 
         <div class="field">
          <label>Question </label>
-         {{input type="text" cols="50" rows="1" value=questionString}}
+         {{input type="text" cols="50" rows="1" valueBinding=questionString}}
         </div>
 
         <div class="field">
          <label>Help Description</label>
-         {{textarea cols="50" rows="1" value=questionData.helpDescription}}
+         {{textarea cols="50" rows="1" valueBinding=questionData.helpDescription}}
         </div>
 
         <div class="field">
           <label>Option 1</label>
-          {{textarea cols="50" rows="1" value=opt1String}}
+          {{textarea cols="50" rows="1" valueBinding=opt1String}}
         </div>
 
         {{#if opt2}}
           <div class="field">
             <label>Option 2</label>
-            {{textarea cols="50" rows="1" value=opt2String}}
+            {{textarea cols="50" rows="1" valueBinding=opt2String}}
           </div>
         {{/if}}
 
         {{#if opt3}}
           <div class="field">
             <label>Option 3</label>
-            {{textarea cols="50" rows="1" value=opt3String}}
+            {{textarea cols="50" rows="1" valueBinding=opt3String}}
           </div>
         {{/if}}
 
         {{#if opt4}}
           <div class="field">
             <label>Option 4</label>
-            {{textarea cols="50" rows="1" value=opt4String}}
+            {{textarea cols="50" rows="1" valueBinding=opt4String}}
           </div>
         {{/if}}
 
         {{#if opt5}}
           <div class="field">
             <label>Option 5</label>
-            {{textarea cols="50" rows="1" value=opt5String}}
+            {{textarea cols="50" rows="1" valueBinding=opt5String}}
           </div>
         {{/if}}
 
         {{#if opt6}}
           <div class="field">
             <label>Option 6</label>
-            {{textarea cols="50" rows="1" value=opt6String}}
+            {{textarea cols="50" rows="1" valueBinding=opt6String}}
           </div>
         {{/if}}
 
