--- a/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
@@ -5,9 +5,9 @@
         <div class="eight wide column">
         <label>{{form.name}}</label>
         </div>
-        {{!-- <div class="four wide column right aligned">
-        {{modify-form ID=form.id}}
-        </div> --}}
+        <div class="four wide column right aligned">
+        {{manage-form ID=form.id}}
+        </div>
         <div class="four wide column left aligned">
         {{delete-form ID=form.id}}
         </div>
