--- a/SelfStart/SelfStartFrontEnd/app/templates/components/delete-question.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/delete-question.hbs
@@ -1,5 +1,6 @@
-<button class="ui mini circular icon red button" {{action 'openModal'}}title="Delete">
+<button class="ui mini circular labeled icon red button" {{action 'openModal'}}title="Delete">
   <i class="remove icon"></i>
+  Delete
 </button>
 
 {{#ui-modal name= modalName class= modalName }}
