Added Edit and Delete Features

--- a/SelfStart/SelfStartFrontEnd/app/templates/exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/exercises.hbs
@@ -19,7 +19,7 @@
           <td>{{Exercise.description}}</td>
           <td>
             <div class="four wide column right aligned">
-              {{edit-rehabplan ID=Exercise.id}}
+              {{edit-exercises ID=Exercise.id}}
             </div>
             <div class="four wide column left aligned">
               {{delete-exercises ID=Exercise.id}} 
