--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
@@ -1,7 +1,7 @@
 {{#if isEditing}}
 
 <div class="ui fluid raised very padded text container segment">
-   <h2 id="rehabPlan" class="ui fluid centered header">Add New Exercise</h2>
+   <h2 id="exercise" class="ui fluid centered header">Add New Exercise</h2>
 
     <form class="ui form">
         
