--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
@@ -1,1 +1,99 @@
+<button class = "ui mini circular icon green button" {{action 'openModal'}} title="Edit">
+  <i class=" pencil icon"> </i>
+</button>
+
+{{#ui-modal name=modalName class=modalName}}
+  
+<div class="ui fluid raised very padded text container segment">
+   <h2 id="rehabPlan" class="ui fluid centered header">Add New Exercise</h2>
+
+    <form class="ui form">
+        
+        <div class="field">
+            <label>Exercise Name</label>
+            {{input type ="text" value=Name placeholder="Exercise Name"}}
+        </div>
+        
+        <div class="field">
+            <label>Description</label>
+            {{textarea value=Description cols="80" rows="6" placeholder="Description"}}
+        </div>
+
+        <div class="field">
+            <label>Author Name</label>
+            {{input type ="text" value=AuthName placeholder="Author Name"}}
+        </div>
+
+        <div class="field">
+
+            <label>Objectives</label>
+
+            <div class="ui action input">
+                {{input type ="text" value=Objective placeholder="Objective"}}
+                <button class="ui white right labeled icon button">
+                    Add Objective
+                    <i class="add icon"></i>
+                </button>
+            </div>
+
+            <div class="ui inverted segment">
+                <div class="ui inverted form"></div>
+            </div>
+        </div>
+
+        <div class="field">
+            <label>Action Steps</label>
+            {{input type ="text" value=ActionSteps placeholder="Action Steps"}} 
+        </div>
+
+        <div class="field">
+            <label>Location</label>
+            {{input type ="text" value=Location placeholder="Location"}}
+        </div>
+
+        <div class="field">
+            <label>Frequency</label>
+            <div class="ui left icon action input">
+                <i class="hourglass half icon"></i>
+                {{input type ="text" value=Frequency placeholder="Frequency"}}
+            </div>
+        </div>
+
+        <div class="field">
+            <label>Duration</label>
+            <div class="ui left icon action input">
+                <i class="calendar icon"></i>
+                {{input type ="text" value=Duration placeholder="Duration"}}
+            </div>
+        </div>
+
+        <div class="field">
+            <label>Target Date</label>
+             <div class="ui left icon action input">
+                <i class="add to calendar icon"></i>
+                {{input type ="text" value=TargetDate placeholder="Target Date"}}
+            </div>
+        </div>
+
+        <div class="field">
+            <label>Multimedia URL</label>
+            {{input type ="text" value=MMURL placeholder="Multi Media URL"}}
+        </div>
+    </form>
+
+      <!--footer for save / cancel-->
+      <div class="actions">
+        <div class="ui black deny button">
+          Cancel
+        </div>
+        <div class="ui positive right labeled icon button">
+          Save
+          <i class="checkmark icon"></i>
+        </div>
+      </div>
+
+</div>
+
+
+{{/ui-modal}}
 {{yield}}
