--- a/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
@@ -1,30 +1,6 @@
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
+<link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/reset.css"> <!-- CSS reset -->
 
-<<<<<<< HEAD
-<<<<<<< HEAD
 {{#nav-bar}}
 
     {{outlet}}
 {{/nav-bar}}
-=======
-<div class="ui borderless fixed menu">
-  <a class=" item">{{#link-to 'home'}}<img class="ui small image" src="assets/images/SelfStart_logo.png">{{/link-to}}</a>
-  <a class="ui right item ">{{#link-to 'admin'}}Settings{{/link-to}}</a>
-  <a class="ui right item ">{{#link-to 'patients'}}PATIENT PROFILE{{/link-to}}</a>
-  <a class="item">3</a>
-  <a class="item">4</a>
-  <a class="item">5</a>
-  <a class="item">6</a>
-</div>
-{{#nav-bar}}{{/nav-bar}}
->>>>>>> 37c94cd557b77f422290d0b7444ba4cb8f48a89e
-=======
-{{#nav-bar}}{{/nav-bar}}
->>>>>>> parent of 842ba67... Patient Profile Deliverables
-
-{{outlet}}
-
-<div id="footer">
-  <img class="ui medium centered image" src="assets/images/SelfStart+logo.png">
-  <p> I am the footer, and you have scroll down to see me.</p>
-</div>
