--- a/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
+{{!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
 
 {{#nav-bar}}{{/nav-bar}}
 
@@ -7,4 +7,10 @@
 <div id="footer">
   <img class="ui medium centered image" src="assets/images/SelfStart+logo.png">
   <p> I am the footer, and you have scroll down to see me.</p>
+</div> --}}
+
+
+<div class="ui segment container">
+  <pre><h2>Ember Upload Images Demo <small>by<b> AK Ouda</b></small></h2></pre>
+  {{simple-example}}
 </div>
