--- a/SelfStart/SelfStartFrontEnd/app/templates/manage-selections.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/manage-selections.hbs
@@ -21,7 +21,9 @@
     </div>
     <div class="ui bottom attached button">
       <i class="add icon"></i>
+      {{#link-to 'province'}}
         Add Province
+      {{/link-to}}
     </div>
   </div>
 
