--- a/SelfStart/SelfStartFrontEnd/app/templates/country.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/country.hbs
@@ -26,7 +26,9 @@
     </div>
     <div class="ui bottom attached button">
       <i class="add icon"></i>
-      Add Province
+      {{#link-to 'province'}}
+        Add Province
+      {{/link-to}}
     </div>
   </div>
 
@@ -79,6 +81,7 @@
 
               <li>{{country.name}}
                 <p style="float: right;">{{delete-country ID=country.id}}</p>
+                <p style="float: right; padding-right: 2%;">{{edit-country ID=country.id}}</p>
               </li>
 
             {{/each}}
