--- a/SelfStart/SelfStartFrontEnd/app/templates/marital-status.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/marital-status.hbs
@@ -27,7 +27,9 @@
     </div>
     <div class="ui bottom attached button">
       <i class="add icon"></i>
-      Add Province
+      {{#link-to 'province'}}
+        Add Province
+      {{/link-to}}
     </div>
   </div>
 
@@ -83,6 +85,7 @@
           <li>
             {{maritalStatus.name}}
             <p style="float: right;">{{delete-status ID=maritalStatus.id}}</p>
+            <p style="float: right; padding-right: 2%;">{{edit-status ID=maritalStatus.id}}</p>
           </li>
 
         {{/each}}
