--- a/SelfStart/SelfStartFrontEnd/public/assets/css/home-style.css
+++ b/SelfStart/SelfStartFrontEnd/public/assets/css/home-style.css
@@ -435,19 +435,34 @@ Main components
 }
 
 #button01{
-  left: 64%;
+  position: absolute;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  font : normal 400 20px/1 'Josefin Sans', sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+  left: 25%;
   top: 60%;
-  bottom: auto;
-  right: auto;
   color: white;
 }
 
 #button02{
-  left: 84%;
+  position: absolute;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  font : normal 400 20px/1 'Josefin Sans', sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+  left: 55%;
   top: 60%;
-  bottom: auto;
-  right: auto;
   color: white;
+
 }
 
 #logo-image{
