revert to merge with branch youda

--- a/SelfStart/SelfStartFrontEnd/public/assets/css/home-style.css
+++ b/SelfStart/SelfStartFrontEnd/public/assets/css/home-style.css
@@ -435,34 +435,19 @@ Main components
 }
 
 #button01{
-  position: absolute;
-  z-index: 2;
-  display: inline-block;
-  -webkit-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  font : normal 400 20px/1 'Josefin Sans', sans-serif;
-  letter-spacing: .1em;
-  text-decoration: none;
-  transition: opacity .3s;
-  left: 25%;
+  left: 64%;
   top: 60%;
+  bottom: auto;
+  right: auto;
   color: white;
 }
 
 #button02{
-  position: absolute;
-  z-index: 2;
-  display: inline-block;
-  -webkit-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  font : normal 400 20px/1 'Josefin Sans', sans-serif;
-  letter-spacing: .1em;
-  text-decoration: none;
-  transition: opacity .3s;
-  left: 55%;
+  left: 84%;
   top: 60%;
+  bottom: auto;
+  right: auto;
   color: white;
-
 }
 
 #logo-image{
